Made some corrections and added a new element

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Life is good</h1>
-    <p>A phrase used i the past tom mean what was actually true</p>
+    <p>A phrase used in the past to mean what was actually true</p>
+    <p>Or rather a phrase no longer true</p>
   </body>
 </html>
